# scrapy_playwright

./: README.md  setup.cfg  setup.py
scrapy_playwright/: __init__.py  http.py  middlewares.py
