[metadata]
name = scrapy_playwright
version = 0.0.7
url = https://github.com/darkstar360/scrapy_playwright
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with playwright
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
